# VKMonitor

./: README.md  pyproject.toml  requirements.txt
scripts/: test_digest_media.py
tests/: test_app.py
vk_wall_monitor/: app.py
