[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vk-wall-monitor"
version = "0.1.0"
description = "Simple VK wall keyword monitor with Telegram notifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "responses>=0.25,<0.26",
]

[project.scripts]
vk-wall-monitor = "vk_wall_monitor.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vk_wall_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
